feat: add sendEmail route
